--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "APP",
   "version": "0.0.1",
   "dependencies": {
-    "bootstrap": "~3.3.5"
+    "bootstrap": "^4.4.1"
   },
   "homepage": "https://github.com/pfarrell/sinatra-shell",
   "authors": [
